fixed background white oval clipping over my hover tags on the project.

--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -52,6 +52,7 @@
   position: absolute;
   opacity: 0.1;
   animation: 3s ease-in-out 0s 1 slideUpOnly;
+  width: 2400px;
 }
 
 .hero__container {
